--- a/tcc/layout/styles/layout.css
+++ b/tcc/layout/styles/layout.css
@@ -11,6 +11,12 @@ File: Layout CSS
 @import url("font-awesome.min.css");
 @import url("framework.css");
 
+
+/* ADICIONADOS */
+#main-cta-button{
+	margin-top: 100%;
+  	padding-bottom: 25%;
+}
 /* Rows
 --------------------------------------------------------------------------------------------------------------- */
 .row1, .row1 a{}
