--- a/tcc/layout/styles/layout.css
+++ b/tcc/layout/styles/layout.css
@@ -42,7 +42,7 @@ File: Layout CSS
 #pageintro article{display:block; max-width:65%; margin:0 auto; text-align:center;}
 #pageintro .heading{margin-bottom:20px; font-size:3rem;}
 #pageintro p:first-of-type{margin:0 0 20px 0; text-transform:uppercase; font-size:1.2rem; letter-spacing:5px;}
-#pageintro footer{margin-top:50px;}
+#pageintro footer{margin-top:50px; padding-top: 25%;}
 
 
 /* Content Area
