--- a/tcc/layout/styles/framework.css
+++ b/tcc/layout/styles/framework.css
@@ -105,7 +105,7 @@ address, article, aside, figcaption, figure, footer, header, main, nav, section{
 .one_half, .two_quarter{width:48.46625766871166%;}
 .two_third{width:65.6441717791411%;}
 .three_quarter{width:74.23312883435584%;}
-
+.tableauPlaceholder{align-items: center;}
 
 /* Spacing
 --------------------------------------------------------------------------------------------------------------- */
